--- a/lab2/GridTicket/GridTicket.css
+++ b/lab2/GridTicket/GridTicket.css
@@ -1,6 +1,12 @@
+@font-face {
+    font-family: "UnB Pro";
+    src:
+    url("fonts/unb_pro_bold.otf") format("opentype");
+    }
+
 body
 {
-    font-family: UnB Pro;
+    font-family: "UnB Pro";
     background-image:url(Images/BackgroundFestival.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -12,12 +18,17 @@ body
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: repeat(5,1fr); 
     
+    
+    
   }
 
 .grid > div{
     border:1.5px solid black;
-    padding:0.5em;
+    padding-top:0em;
+    padding-bottom: 0;
     text-align:center;
+    /*align-content: center;
+    justify-content: center;*/
   
   
 }
@@ -28,6 +39,7 @@ body
     color: white;
     font-size: 32px;
     grid-column:1/3;
+    
     
     
   
@@ -44,8 +56,8 @@ body
 .grid .barcode{
     grid-column:1/3;
     grid-row:3/6;
-    margin: auto;
-    border: none;
+    border: hidden;
+    
   
     
 }
@@ -77,7 +89,7 @@ body
     .grid{
         display:grid;
         grid-template-columns: repeat(4,1fr);
-        grid-template-rows: repeat(4,1fr); 
+        grid-template-rows:  1fr 2fr 2fr 1fr; 
        
       }
     
@@ -91,18 +103,27 @@ body
     
     
      .grid .IMD{
-        background-color: none;
+        border-top:none;
+        border-left: 1.5px solid black;
+        border-right: 1.5px solid black;
+        border-bottom: 1.5px solid black;
+        background:none;
         color: black;
         font-size: 72px;
         grid-column:1/4;
         grid-row:2/3;
+       
         
         
       
         
     }
     .grid .music{
-        background-color: none;
+        border-top: 1.5px solid black;
+        border-left: 1.5px solid black;
+        border-right: 1.5px solid black;
+        border-bottom: none;
+        background:none;
         color: black;
         font-size: 12px;
         grid-column:1/4;
@@ -114,8 +135,10 @@ body
         border:1.5px solid black;
         grid-column:4/5;
         grid-row:1/6;
-        margin: auto;
-        border: none;
+        
+        
+        
+        
       
         
     }
